tests/ui/errors/auto-impl.return-type.rs
#[fortuples::auto_impl]
trait Test {
    fn test(&self) -> i32;
}

fn main() {}
